--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev": "eleventy --serve"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
-    "markdown-it": "^14.1.0"
+    "@11ty/eleventy": "^2.0.1"
   }
 }
